--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,22 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.0.1.Final</version>
+
+                <configuration>
+                    <hostname>${wildfly-hostname}</hostname>
+                    <port>${wildfly-port}</port>
+                    <jboss-home>${wildfly-home}</jboss-home>
+                    <modules-path>${wildfly-home}\modules</modules-path>
+                    <username>${wildfly-username}</username>
+                    <password>${wildfly-password}</password>
+                    <filename>${project.artifactId}-${project.version}.war</filename>
+                    <name>ROOT.war</name>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.4.2</version>
